added packaging command